--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ sandbox.ipynb
 config.json
 audio.*
 /data/mspconvs.pkl
+/data/*.pkl
+/data/*.gz
+/audioparts/
+/audiosegments
 data/wadf.pkl
 .metals/
 .mypy_cache/
